# quickplay-server-finder

./: .gitignore  README.md  app.py  blacklist.json  config.ini  greylist.json  main.py  pyproject.toml  quickplay.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: bandit.yml  qodana_code_quality.yml
static/: quickplay.css
static/js/: ham.js  index.js  server_list.js
templates/: ham.html  index.html  json.html  server_list.html  xlists.html
