[project]
name = "quickplay"
version = "0.1.0"
description = "True QuickPlay Server finder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==6.0.0b1",
    "flask-caching==2.3.1",
    "flask-restplus>=0.13.0",
    "flask[async]==3.1.1",
    "fuzzywuzzy==0.18.0",
    "pylibmc==1.6.3",
    "python-a2s==1.4.1",
    "python-dotenv>=1.1.0",
    "python-levenshtein>=0.27.1",
    "steam[client]==1.4.4",
]

[tool.uv.sources]
steam = { git = "https://github.com/solsticegamestudios/steam" }
